tests/test_files/invalid_files_semantic/continue_outside.c
int main() {
    continue;  // âŒ sem loop englobando
    return 0;
}
